src/objects/QPMS__Business_Entity__c.object
<CustomObject>
    <description>This is a master object in Quality Central represents business organization like departments, work center, plant area etc.</description>
    <fields>
        <fullName>QPMS__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Code__c</fullName>
        <label>Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Department_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Entity Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Departments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Head_Name__c</fullName>
        <label>Head Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Parent_Business_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>parent relation to BusinessEntity</description>
        <label>Parent Business Entity</label>
        <referenceTo>QPMS__Business_Entity__c</referenceTo>
        <relationshipLabel>Business Entities</relationshipLabel>
        <relationshipName>Business_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>To differentiate Department and Sub Department</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Department</fullName>
                </value>
                <value>
                    <fullName>Sub Department</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__UDF__c</fullName>
        <label>UDF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Business Entity</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <columns>NAME</columns>
        <columns>QPMS__Code__c</columns>
        <columns>QPMS__Type__c</columns>
        <columns>QPMS__Active__c</columns>
        <columns>QPMS__Parent_Business_Entity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Business Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Entities</pluralLabel>
    <recordTypes>
        <fullName>QPMS__Department</fullName>
        <active>true</active>
        <label>Department</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>